--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,6 +20,7 @@ pipeline {
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
+                sh 'hangoutsNotify message: "This message is from a pipeline!",token: "yzhtvY0dhgMuU3B3AdcBqUJas",threadByJob: false
             }
         }
     }
